# DAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
docker/: runpod_train.sh  start.sh
docker/hpc/: infer.job  pull_container.job  sweep.job  train.job
src/: __init__.py  annotation_cli.py  annotation_manifest.py  annotation_review.py  cellpose_biomass.py  cellpose_eval.py  cellpose_export.py  cellpose_pack.py  cellpose_reconstruct.py  cellpose_sweep.py  classifier_dataset.py  cli.py  config.py  crop_export.py  local_refinement.py  mask_overlay.py  pipeline.py  proposal_generation.py
src/biomass/: __init__.py  calibration.py  contour_smoothing.py  contours.py  qc.py  visualization.py  volume_baselines.py  volume_pipeline.py  volume_zeder.py
src/io/: discover.py  loader.py
src/preprocessing/: mask_artifacts.py
src/profiles/: calibrated_0645.toml  default.toml  proposal_high_recall.toml
src/segmentation/: __init__.py  _debug.py  _evidence.py  _postprocess.py  _threshold.py  _utils.py  segment.py
src/visualization/: overlay.py
tests/: test_annotation_review.py  test_segmentation.py
