[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapi"
version = "0.1.0"
description = "DAPI image discovery and loading utilities."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dapi-segment = "src.cli:main"
dapi-annotate = "src.annotation_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"src.profiles" = ["*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
